<resources>
    <string name="app_name">Treasure</string>
    <string name="title_activity_map">Map</string>
    <string name="Continue">Continue</string>
    <string name="Back">Back</string>
    <string name="Hint">Hint</string>
    <string name="ProfileAcc">Profile</string>
    <string name="NewHunt">New Hunt</string>
    <string name="MyHunts">My Hunts</string>
    <string name="GoldEarnedAmount">100</string>
    <string name="GoldEarned">Gold Found</string>
    <string name="GoldBonus">Bonus Gold</string>
    <string name="Collect">Collect Gold</string>
    <string name="TotalGold">Total Gold</string>
    <string name="Finish">Finish</string>
</resources>
