<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="400dp"
    android:layout_gravity="center"
    android:background="@color/colorPrimaryDarkest"
    tools:context=".popUp">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/imageView4"
        android:layout_marginTop="0dp"
        android:src="@drawable/openedchests" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/imageView3"
        android:layout_marginTop="0dp"
        android:src="@drawable/openedchests" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="81dp"
        android:src="@drawable/openedchests" />

    <TextView
        android:id="@+id/goldEarned"
        android:layout_width="249dp"
        android:layout_height="62dp"
        android:layout_above="@+id/imageView3"
        android:layout_alignParentStart="true"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="11dp"

        android:text="@string/GoldEarned" />

    <TextView
        android:id="@+id/goldBonus"
        android:layout_width="249dp"
        android:layout_height="62dp"
        android:layout_alignBottom="@+id/imageView3"
        android:layout_alignParentStart="true"

        android:layout_marginStart="103dp"
        android:layout_marginBottom="13dp"
        android:text="@string/GoldBonus" />

    <TextView
        android:id="@+id/totalGold"
        android:layout_width="249dp"
        android:layout_height="62dp"
        android:layout_alignBottom="@+id/imageView5"

        android:layout_alignParentStart="true"
        android:layout_marginStart="103dp"
        android:layout_marginBottom="11dp"
        android:text="@string/TotalGold" />

    <TextView
        android:id="@+id/goldEarnedAmount"
        android:layout_width="215dp"
        android:layout_height="41dp"
        android:layout_alignBottom="@+id/goldEarned"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="6dp"
        android:textSize="19sp"
        android:text="@string/GoldEarnedAmount" />

    <TextView
        android:id="@+id/goldBonusAmount"
        android:layout_width="215dp"
        android:layout_height="41dp"
        android:layout_alignBottom="@+id/goldBonus"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="0dp"
        android:text="@string/GoldEarnedAmount"
        android:textSize="19sp" />

    <TextView
        android:id="@+id/totalGoldAmount"
        android:layout_width="215dp"
        android:layout_height="41dp"
        android:layout_alignBottom="@+id/totalGold"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="7dp"
        android:text="@string/GoldEarnedAmount"
        android:textSize="19sp" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="1dp"
        android:src="@drawable/button_yellow"
        android:onClick="backPress"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignTop="@+id/imageView6"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:gravity="center"
        android:textSize="25sp"

        android:text="@string/Finish" />

</RelativeLayout>