<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="400dp"
    android:layout_gravity="center"
    android:background="@color/colorPrimaryDarkest"
    tools:context=".popUp">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_height="80dp"
        android:layout_below="@+id/imageView4"
        android:layout_marginTop="0dp"
        android:src="@drawable/openedchests" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="81dp"
        android:src="@drawable/openedchests" />

    <TextView
        android:id="@+id/goldEarned"
        android:layout_width="249dp"
        android:layout_height="62dp"
        android:layout_above="@+id/imageView3"
        android:layout_alignParentStart="true"
        android:layout_marginStart="160dp"
        android:layout_marginBottom="11dp"
        android:fontFamily="@font/rumble"
        android:textColor="#fff"
        android:textSize="28dp"
        android:text="@string/GoldEarned" />

    <TextView
        android:id="@+id/goldBonus"
        android:layout_width="249dp"
        android:layout_height="62dp"
        android:layout_alignBottom="@+id/imageView3"
        android:layout_alignParentStart="true"
        android:fontFamily="@font/rumble"
        android:textSize="28dp"
        android:textColor="#fff"
        android:layout_marginStart="160dp"
        android:layout_marginBottom="13dp"
        android:text="@string/GoldBonus" />

    <TextView
        android:id="@+id/goldEarnedAmount"
        android:layout_width="50dp"
        android:layout_height="41dp"
        android:layout_alignBottom="@+id/imageView4"
        android:layout_marginStart="200dp"
        android:fontFamily="@font/rumble"
        android:layout_marginBottom="5dp"
        android:text="@string/GoldEarnedAmount"
        android:textColor="#fff"
        android:textSize="28dp" />

    <TextView
        android:id="@+id/goldBonusAmount"
        android:layout_width="50dp"
        android:layout_height="41dp"
        android:layout_alignBottom="@+id/imageView3"
        android:layout_marginStart="200dp"
        android:fontFamily="@font/rumble"
        android:textColor="#fff"
        android:layout_marginBottom="5dp"
        android:text="@string/GoldEarnedAmount"
        android:textSize="28dp" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="1dp"
        android:src="@drawable/button_yellow"
        android:onClick="backPress"/>

    <TextView
        android:id="@+id/rewards"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="REWARDS"
        android:fontFamily="@font/rumble"
        android:textSize="45dp"
        android:textAlignment="center"
        android:textColor="#fff" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignTop="@+id/imageView6"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/rumble"
        android:gravity="center"
        android:textSize="35dp"
        android:textColor="#fff"

        android:text="@string/Collect" />

</RelativeLayout>