<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapActivity" />

    <View
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="93dp"
        android:layout_alignBottom="@+id/map"
        android:layout_marginBottom="-1dp"
        android:background="@color/colorPrimaryDark"
        android:visibility="visible" />

    <View
        android:id="@+id/bottomAccent"
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:layout_alignBottom="@+id/map"
        android:layout_marginBottom="0dp"
        android:background="@color/colorPrimaryDarkest"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="171dp"
        android:layout_height="108dp"
        android:layout_below="@+id/backButton"
        android:layout_marginTop="2dp"
        android:visibility="invisible"
        android:text="TextView" />

    <ImageButton
        android:id="@+id/Goldcoins"
        android:layout_width="65dp"
        android:layout_height="68dp"
        android:layout_alignTop="@+id/bottomBar"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/coins"
        android:contentDescription="Gold coins counter" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="59dp"
        android:layout_height="55dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"

        android:layout_marginTop="12dp"
        android:layout_marginLeft="5dp"
        android:contentDescription="@string/Back"
        android:onClick="backPress"
        android:background="@drawable/backarrow"/>


    <ImageButton
        android:id="@+id/Hintbutton"
        android:layout_width="65dp"
        android:layout_height="68dp"
        android:layout_alignTop="@+id/bottomBar"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/hint"
        android:contentDescription="@string/Hint"
        android:onClick="showHint" />

    <ImageButton
        android:id="@+id/Chest"
        android:layout_width="65dp"
        android:layout_height="68dp"
        android:layout_alignLeft="@+id/imageView"
        android:layout_alignTop="@+id/bottomBar"
        android:layout_marginLeft="-8dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/chest"
        android:contentDescription="Gold coins counter"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/timerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/Chest"
        android:layout_alignEnd="@+id/Chest"
        android:layout_alignBottom="@+id/Chest"
        android:layout_marginStart="0dp"
        android:gravity="center_horizontal"
        android:textColor="#fff"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="2dp"
        android:layout_weight="1"
        android:text="TextView" />

    <TextView
        android:id="@+id/HintText"
        android:layout_width="match_parent"
        android:layout_height="94dp"
        android:layout_above="@+id/bottomBar"
        android:layout_marginBottom="0dp"
        android:gravity="center_horizontal"
        android:text="TextView"
        android:textColor="#fff"
        android:textSize="20sp"
        android:visibility="invisible"
        tools:text="@string/Hint" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="62dp"
        android:layout_height="65dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="5dp"
        android:onClick="profilePress"
        android:contentDescription="@string/ProfileAcc"
        android:background="@drawable/profilesmall" />

    <ImageView
        android:id="@+id/applogo"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="130dp"
        android:background="@drawable/logo_color"
        android:contentDescription="@string/ProfileAcc" />

    <TextView
        android:id="@+id/hintConstant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/Hintbutton"
        android:layout_alignEnd="@+id/Hintbutton"
        android:layout_alignBottom="@+id/Hintbutton"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:textColor="#fff"
        android:layout_marginBottom="2dp"
        android:gravity="center_horizontal"
        android:text="@string/Hint" />

    <TextView
        android:id="@+id/coinsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/Goldcoins"
        android:layout_alignEnd="@+id/Goldcoins"
        android:layout_alignBottom="@+id/Goldcoins"
        android:textColor="#fff"
        android:gravity="center_horizontal"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="2dp"
        android:text="TextView" />


</RelativeLayout>